--- a/servlet-application/pom.xml
+++ b/servlet-application/pom.xml
@@ -7,7 +7,7 @@
     <!-- PROJECT SECTION -->
     <!-- =============== -->
     <parent>
-        <groupId>com.github.aetherwisp</groupId>
+        <groupId>com.github.adt.startone</groupId>
         <artifactId>jakarta-ee-tutorials</artifactId>
         <version>1.0.0</version>
     </parent>
