--- a/jakarta-persistence/pom.xml
+++ b/jakarta-persistence/pom.xml
@@ -1,11 +1,26 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.github.adt.startone</groupId>
-    <artifactId>jakarta-ee-tutorials</artifactId>
-    <version>1.0.0</version>
-  </parent>
-  <groupId>com.github.adt.startone</groupId>
-  <artifactId>jakarta-persistence</artifactId>
-  <version>1.0.0</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <!-- =============== -->
+    <!-- PROJECT SECTION -->
+    <!-- =============== -->
+    <parent>
+        <groupId>com.github.adt.startone</groupId>
+        <artifactId>jakarta-ee-tutorials</artifactId>
+        <version>1.0.0</version>
+    </parent>
+    <artifactId>jakarta-persistence</artifactId>
+    <packaging>war</packaging>
+
+    <!-- ==================== -->
+    <!-- DEPENDENCIES SECTION -->
+    <!-- ==================== -->
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-web-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
