Feature/jakarta persistence (#1)
* groupId を変更

* Jakarta Persistence 用サブプロジェクトを追加

* gitignore に Eclipse 関連のファイル・ディレクトリを追加

* パッケージを変更

* Jakarta Persistence のチュートリアル

---------

Co-authored-by: aetherwisp <aetherwisp@outlook.jp>

--- a/jakarta-persistence/pom.xml
+++ b/jakarta-persistence/pom.xml
@@ -11,7 +11,7 @@
         <artifactId>jakarta-ee-tutorials</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>servlet-application</artifactId>
+    <artifactId>jakarta-persistence</artifactId>
     <packaging>war</packaging>
 
     <!-- ==================== -->
